# cells

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
sources/: CMakeLists.txt  cell.cpp  cell.h  cell_search_proxy.cpp  cell_search_proxy.h  field.h  main.cpp  pch.h  simulation.cpp  simulation.h  world.cpp  world.h
sources/application/: CMakeLists.txt  application_pch.h  main.cpp  main_loop.cpp  main_loop.h  main_window.cpp  main_window.h
sources/application_interface/: CMakeLists.txt  drawable.h  updatable.h
sources/cmake/: target_asan_compile_options.cmake  target_copy_required_dll.cmake
sources/common/: CMakeLists.txt  application_storage.h  basic_defines.h  basicdefs.h  breakpoint.cpp  breakpoint.h  command_line.cpp  command_line.h  common.h  common_fwd.h  common_pch.h  common_system.cpp  common_system.h  flags.h  random.cpp  random.h  sample_counter.cpp  sample_counter.h  sample_counter.hpp  storage.cpp  storage.h  storage.hpp  time_counter.cpp  time_counter.h
sources/common/asserts/: CMakeLists.txt  assert.h  asserts_config.h.in
sources/common/clock/: CMakeLists.txt  clock.cpp  clock.h
sources/common/conditions/: CMakeLists.txt  condition.h  condition_system.cpp  condition_system.h
sources/common/mt/: CMakeLists.txt  spin_lock.cpp  spin_lock.h  spin_lock.hpp
sources/common/profile/: CMakeLists.txt  profile.cpp  profile.h  profile_config.h.in
sources/common/random/: CMakeLists.txt  random.cpp  random.h  random.hpp
sources/common/registrar/: CMakeLists.txt  registrable_system.h  registrar.cpp  registrar.h  registrar.hpp
sources/common/storage/: CMakeLists.txt  stack_storage.cpp  stack_storage.h  stack_storage.hpp  storage.cpp  storage.h  storage.hpp
sources/common/time/: CMakeLists.txt  time.cpp  time.h  utils.cpp  utils.h
sources/common/utils/: CMakeLists.txt  narrow_cast.h  stub_error_code.cpp  stub_error_code.h  windows_api.h
sources/conway_life/: CMakeLists.txt  conway_debug_widget.cpp  conway_debug_widget.h  conway_game.cpp  conway_game.h  conway_game_system.cpp  conway_game_system.h  field.cpp  field.h  field_position.h  field_utilities.cpp  field_utilities.h  main.cpp
sources/conway_life/components/: has_life_tag.yaml  neighbours_count.yaml  should_collect_neighbour.yaml
sources/conway_life/systems/: collect_neighbours_count_system.yaml  draw_alive_cell_system.cpp  draw_alive_cell_system.yaml  invalidate_neighbours_system.cpp  invalidate_neighbours_system.yaml  process_alive_cell_vitality_system.cpp  process_empty_cell_vitality_system.cpp  remove_died_cell_system.cpp  update_game_controller_system.cpp
sources/processor/: CMakeLists.txt  memory.h  patrol_loop.txt  procedure.cpp  procedure.h  processor.h  processor_control_block.h  processor_pch.h  processor_profile_category.h  processor_todo.txt
sources/processor/procedures/: CMakeLists.txt  pending_procedure_id.h  procedure.cpp  procedure.h  procedure.hpp  procedure_context.cpp  procedure_context.h  procedure_context.hpp  procedure_context_placeholder.cpp  procedure_context_placeholder.h  procedure_executor.cpp  procedure_executor.h  procedure_external_context.h  procedure_id.h  procedure_state.h  procedure_table.cpp  procedure_table.h
sources/processor/processor/: CMakeLists.txt  memory.cpp  memory.h  memory.hpp  processor.cpp  processor.h  processor_context.cpp  processor_context.h  processor_context.hpp  processor_control_block.cpp  processor_control_block.h  processor_control_block_guard.cpp  processor_control_block_guard.h  processor_debugger.h  processor_external_context.h  processor_instruction.cpp  processor_instruction.h  processor_instruction_concept.h  processor_instruction_visitor.cpp  processor_instruction_visitor.h  processor_memory.h  processor_memory.hpp  processor_memory_type.h  processor_stack.cpp  processor_stack.h  processor_stack.hpp  processor_state.h  processor_user_data.h
sources/projects/: CMakeLists.txt
sources/render/: CMakeLists.txt  cell_render.cpp  cell_render.h  field_render.cpp  field_render.h  pch.h  render_pch.h  render_profile_category.h  world_render.cpp  world_render.h  world_render_parameters.h
sources/scripts/: CMakeLists.txt  lua_registrable_system.cpp  lua_registrable_system.h  lua_system.cpp  lua_system.h  scripts_pch.h  scripts_system.cpp  scripts_system.h  setup_script.cpp  setup_script.h  setup_script_errors.cpp  setup_script_errors.h  simulation_script.cpp  simulation_script.h  tick_script.cpp  tick_script.h
sources/shaders/: fragment_shader.glsl
sources/simulation/: CMakeLists.txt  base_script.h  brain.cpp  brain.h  brain_data.cpp  brain_data.h  brain_data.hpp  brain_packed_data.h  brain_view.cpp  brain_view.h  cell.cpp  cell.h  cell_id.h  cell_position.h  cell_position_utils.h  cell_search_proxy.cpp  cell_search_proxy.h  cell_type.h  direction_utils.cpp  direction_utils.h  ecs_simulation_system.h  field.cpp  field.h  field_iterator.cpp  field_iterator.h  field_iterator.hpp  simulation.cpp  simulation.h  simulation_config.h  simulation_ecs.h  simulation_parameters.h  simulation_pch.h  simulation_profile_category.h  simulation_registrable_system.cpp  simulation_registrable_system.h  simulation_system.h  tick_calculator.cpp  tick_calculator.h  unit_processor.cpp  unit_processor.h  (+6 more)
sources/tests/: CMakeLists.txt  component_storage_tests.cpp  ecs_tests.cpp  main_tests.cpp  procedure_tests.cpp  processor_memory_tests.cpp  processor_stack_tests.cpp  processor_tests.cpp  registrar_tests.cpp  scripts_tests.cpp  sol2_tests.cpp  stack_storage_tests.cpp  storage_tests.cpp  system_tests.cpp  tests_pch.h
sources/ui/: CMakeLists.txt  base_widget.h  custom_render_widget.h  root_widget.cpp  root_widget.h  root_widget.hpp  sdl_utils.cpp  sdl_utils.h  status_panel.cpp  status_panel.h  ui_application_interface.h  ui_config.h  ui_layout.h  ui_pch.h  ui_registrable_system.cpp  ui_registrable_system.h  ui_system.cpp  ui_system.h  ui_widget.h  world_widget.cpp  world_widget.h  world_widget_parameters.h
sources/universe/: CMakeLists.txt  main.cpp  universe_pch.h  world_white.cpp  world_white.h
tests/: CMakeLists.txt  (+2 more)
(+542 files in other folders)
