add_subdirectory(generated)

target_sources(${PROJECT_NAME}
    PRIVATE
        born_new_life_system.cpp
        collect_neighbours_count_system.cpp
        draw_alive_cell_system.cpp
        process_empty_cell_vitality_system.cpp
        process_alive_cell_vitality_system.cpp
        remove_died_cell_system.cpp
        invalidate_neighbours_system.cpp
        update_game_controller_system.cpp
        draw_cell_particle_system.cpp
        create_birth_emitter_system.cpp
        create_death_emitter_system.cpp
        emit_new_particle_system.cpp
        update_emitter_system.cpp
        update_particle_system.cpp
        draw_empty_cell_system.cpp
)